# turbogene

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: design_note_v1.md  design_note_v2.md  design_note_v3.md  design_note_v3_ablation.md  design_note_v3_final.md
docs/profiling_results/: profiling_results.json
examples/: quickstart.py
scripts/: ablation_study.py  benchmark_attribution.py  benchmark_phase3.py  calibration_robustness.py  download_datasets.py  final_benchmark.py  generate_figures.py  generative_decode_benchmark.py  large_scale_benchmark.py  poc_sdpa_conversion.py  profile_transcriptformer.py  test_generation.py  test_quantized_e2e.py  test_quantizer.py  test_sdpa_e2e.py
turbogene/: __init__.py  baselines.py  data_utils.py  quantized_model.py  quantizer.py  sdpa_layers.py  sdpa_model.py  weight_quant_baseline.py
